test/conformance/chainsaw/namespaced-generating-policies/data/issue-15312-generate-pdb/generated-pdb.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: demo-pdb
  namespace: test-15312
spec:
  minAvailable: 1
  selector:
    matchLabels:
      app: demo
