test/conformance/chainsaw/namespaced-generating-policies/data/issue-15312-generate-pdb/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-15312
