test/conformance/chainsaw/namespaced-generating-policies/data/issue-15312-generate-pdb/permissions.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: kyverno-ngpol-15312
  namespace: test-15312
rules:
- apiGroups: ["apps"]
  resources: ["deployments"]
  verbs: ["get", "list", "watch"]
- apiGroups: ["policy"]
  resources: ["poddisruptionbudgets"]
  verbs: ["create", "get", "list", "watch", "update", "patch", "delete"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: kyverno-ngpol-15312
  namespace: test-15312
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: kyverno-ngpol-15312
subjects:
- kind: ServiceAccount
  name: kyverno-background-controller
  namespace: kyverno
